--- a/config/database.yml
+++ b/config/database.yml
@@ -20,8 +20,8 @@ default: &default
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: postgres
-  password: console
+  username: rei
+  password: console123
 
 development:
   <<: *default
